# bevy-technical-demo-001

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Tiltfile  config.json  docker-compose.yml  sqlx-data.json
.docker-compose/: nginx.conf
.github/: dependabot.yml
.github/workflows/: ci.yaml
docs/architecture/: protocol.md  state.md  trust.md
examples/: quic_client.rs  quic_server.rs  tls.rs
migrations/: 20220810194037_add_server_table.sql
src/: app.rs  character.rs  config.rs  database.rs  lib.rs  main.rs  network.rs  network_1.rs  protocol.rs
src/database/: backend.rs  configure.rs  mod.rs  plugin.rs  protocol.rs  server_register.rs  server_update_last_seen.rs
src/database/postgres/: mod.rs  server_register.rs  server_update_last_seen.rs
src/http/: backend.rs  configure.rs  mod.rs
src/network/: backend.rs  configure.rs  mod.rs  plugin.rs  protocol.rs
src/network/quic/: client.rs  mod.rs  server.rs  shared.rs
src/quic/: client.rs  server.rs  shared.rs
