[package]
name = "bevy-technical-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.15"
bevy = "0.8"
config = "0.13.2"
futures = "0.3.24"
hyper = { version = "0.14.20", features = ["full"] }
quinn = "0.8.5"
rcgen = "0.9.3"
rustls = { version = "0.20.6", features = ["quic"] }
rustls-pemfile = "1.0.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"

[features]
client = []
editor = []
server = []

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[[example]]
name = "quic_client"

[[example]]
name = "quic_server"

[[example]]
name = "tls"
