[package]
name = "bevy-technical-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
bevy = "0.8"
config = "0.13.2"
futures = "0.3.25"
hyper = { version = "0.14.20", features = ["full"] }
quinn = "0.8.5"
rcgen = "0.10.0"
rustls = { version = "0.20.7", features = ["quic"] }
rustls-pemfile = "1.0.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"

[features]
client = []
editor = []
server = []

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[[example]]
name = "quic_client"

[[example]]
name = "quic_server"

[[example]]
name = "tls"
