[package]
name = "bevy-technical-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.1"
bevy = "0.8"
config = "0.13.3"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["full"] }
quinn = "0.9.3"
rcgen = "0.10.0"
rustls = { version = "0.20.7", features = ["quic"] }
rustls-pemfile = "1.0.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"

[features]
client = []
editor = []
server = []

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[[example]]
name = "quic_client"

[[example]]
name = "quic_server"

[[example]]
name = "tls"
